--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
@@ -22,8 +22,8 @@
 			<thead>
 				<tr>
 					<th>#</th>
-#foreach ($property in $properties) 
-#if(!$property.dataPrimaryKey)
+#foreach ($property in $properties)
+#if($property.widgetIsMajor)
 					<th class="text-capitalize">${property.name}</th>
 #end
 #end
@@ -34,7 +34,7 @@
 				<tr ng-repeat="next in data">
 					<td>{{$index + 1}}</td>
 #foreach ($property in $properties) 
-#if(!$property.dataPrimaryKey)
+#if($property.widgetIsMajor)
 					<td>{{next.${property.name}}}</td>
 #end
 #end
@@ -80,7 +80,7 @@
 				<div class="modal-body">
 					<form ng-hide="actionType === 'delete'">
 #foreach ($property in $properties)
-#if(!$property.dataPrimaryKey)
+#if(!$property.dataAutoIncrement)
 						<div class="form-group">
 							<label>${property.widgetLabel}</label>
 							<input type="${property.widgetType}" class="form-control" placeholder="Enter ${property.widgetLabel.toLowerCase()}" ng-model="entity.${property.name}">
