--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/manage/index.html.template
@@ -14,7 +14,7 @@
 
 <body ng-controller="PageController">
 	<div class="page-header">
-		<h1>Manage Template - Full-stack Application (Angular)</h1>
+		<h1>Manage ${name}</h1>
 	</div>
 	<div class="container">
 		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
@@ -89,7 +89,7 @@
 #end
 					</form>
 					<div ng-show="actionType === 'delete'">
-						You are going to delete Template - Full-stack Application (Angular) with <b>Id = {{entity.id}}</b>.
+						You are going to delete ${name} with <b>Id = {{entity.id}}</b>.
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -113,7 +113,7 @@
 		angular.module('page', []);
 		angular.module('page').controller('PageController', function ($scope, $http) {
 
-			var api = '/services/v3/js/Template - Full-stack Application (Angular)/api/Template - Full-stack Application (Angular).js';
+			var api = '/services/v3/js/${projectName}/api/${name}.js';
 
 			function load() {
 				$http.get(api)
