RBAC for CMIS adaptations

--- a/modules/cms/cms-managed/src/main/resources/dirigible-cms.properties
+++ b/modules/cms/cms-managed/src/main/resources/dirigible-cms.properties
@@ -16,3 +16,4 @@ DIRIGIBLE_CMS_MANAGED_CONFIGURATION_JNDI_NAME=java:comp/env/EcmService
 # DIRIGIBLE_CMS_MANAGED_CONFIGURATION_DESTINATION=
 
 DIRIGIBLE_CONNECTIVITY_CONFIGURATION_JNDI_NAME=java:comp/env/connectivity/Configuration
+DIRIGIBLE_CMS_ROLES_ENABLED=false
