--- a/modules/cms/cms-internal/src/main/resources/dirigible-cms.properties
+++ b/modules/cms/cms-internal/src/main/resources/dirigible-cms.properties
@@ -11,3 +11,4 @@
 DIRIGIBLE_CMS_PROVIDER=internal
 DIRIGIBLE_CMS_INTERNAL_ROOT_FOLDER=target
 DIRIGIBLE_CMS_INTERNAL_ROOT_FOLDER_IS_ABSOLUTE=false
+DIRIGIBLE_CMS_ROLES_ENABLED=false
