--- a/modules/engines/engine-javascript/src/main/resources/dirigible-js.properties
+++ b/modules/engines/engine-javascript/src/main/resources/dirigible-js.properties
@@ -10,3 +10,4 @@
 
 # Javascript Engine Specific Parameters
 DIRIGIBLE_JAVASCRIPT_ENGINE_TYPE_DEFAULT=rhino
+DIRIGIBLE_JAVASCRIPT_DEBUG_ENABLED=false
