--- a/api/api-facade/api-cms/pom.xml
+++ b/api/api-facade/api-cms/pom.xml
@@ -40,11 +40,18 @@
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-security</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
 		    <groupId>org.apache.chemistry.opencmis</groupId>
 		    <artifactId>chemistry-opencmis-commons-api</artifactId>
 		    <version>${chemistry.version}</version>
 		    <scope>provided</scope>
 		</dependency>
+
     </dependencies>
 
 </project>
