--- a/api/api-facade/api-security/pom.xml
+++ b/api/api-facade/api-security/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>dirigible-api-facade-http</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
+		</dependency>
+		
     </dependencies>
 
 </project>
