--- a/ide/ui/ide-all/pom.xml
+++ b/ide/ui/ide-all/pom.xml
@@ -114,5 +114,10 @@
 		 	<artifactId>dirigible-ide-ui-ace</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-debugger</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
