--- a/modules/engines/engine-javascript-nashorn/pom.xml
+++ b/modules/engines/engine-javascript-nashorn/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>dirigible-engine-javascript</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
+		</dependency>
         
         <dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
