--- a/modules/engines/engine-javascript-rhino/pom.xml
+++ b/modules/engines/engine-javascript-rhino/pom.xml
@@ -49,10 +49,17 @@
             <artifactId>dirigible-engine-javascript</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        
         <dependency>
 		    <groupId>org.mozilla</groupId>
 		    <artifactId>rhino</artifactId>
 		    <version>1.7.7.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
