--- a/modules/engines/engine-javascript-v8/pom.xml
+++ b/modules/engines/engine-javascript-v8/pom.xml
@@ -54,6 +54,7 @@
 			<artifactId>dirigible-engine-javascript</artifactId>
 			<version>3.2.0-SNAPSHOT</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.eclipsesource.j2v8</groupId>
 			<artifactId>j2v8_macosx_x86_64</artifactId>
@@ -73,6 +74,12 @@
 			<groupId>com.eclipsesource.j2v8</groupId>
 			<artifactId>j2v8_win32_x86</artifactId>
 			<version>${j2v8.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
