Fixed: #197 - Logs View

--- a/modules/services/pom.xml
+++ b/modules/services/pom.xml
@@ -23,6 +23,7 @@
 		<module>service-security</module>
 		<module>service-theme</module>
 		<module>service-transport</module>
+		<module>service-operations</module>
 	</modules>
 
 </project>
