--- a/templates/template-extension-perspective/src/main/resources/template-extension-perspective/extensions/menu/perspective.extension.template
+++ b/templates/template-extension-perspective/src/main/resources/template-extension-perspective/extensions/menu/perspective.extension.template
@@ -1,5 +1,5 @@
 {
-	"module": "{{projectName}}/services/menu/{{fileName}}",
+	"module": "{{projectName}}/perspective/menu/{{fileName}}",
 	"extensionPoint": "ide-{{fileName}}-menu",
 	"description": "{{fileName}} Menu"
 }
