--- a/templates/template-extension-perspective/src/main/resources/template-extension-perspective/extensions/perspective.extension.template
+++ b/templates/template-extension-perspective/src/main/resources/template-extension-perspective/extensions/perspective.extension.template
@@ -1,5 +1,5 @@
 {
-	"module": "{{projectName}}/services/perspective-{{fileName}}.js",
+	"module": "{{projectName}}/perspective/{{fileName}}.js",
 	"extensionPoint": "ide-perspective",
 	"description": "{{fileName}} Perspective"
 }
