--- a/templates/template-extension-perspective/src/main/resources/template-extension-perspective/perspective/perspective.js.template
+++ b/templates/template-extension-perspective/src/main/resources/template-extension-perspective/perspective/perspective.js.template
@@ -11,7 +11,7 @@
 exports.getPerspective = function() {
 	return {
 		"name": "{{fileName}}",
-		"link": "../{{projectName}}/{{fileName}}.html",
+		"link": "../{{projectName}}/index.html",
 		"order": "120",
 		"image": "address-book"
 	};
