--- a/releng/sap-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/sap-all/src/main/webapp/WEB-INF/web.xml
@@ -194,4 +194,15 @@
 	    </auth-constraint>
 	</security-constraint>
 	
+	<!-- Security roles -->
+	<security-role>
+	    <role-name>Everyone</role-name>
+	</security-role>
+	<security-role>
+	    <role-name>Developer</role-name>
+	</security-role>
+	<security-role>
+	    <role-name>Operator</role-name>
+	</security-role>
+	
 </web-app>
