--- a/releng/server-runtime/src/main/webapp/WEB-INF/web.xml
+++ b/releng/server-runtime/src/main/webapp/WEB-INF/web.xml
@@ -173,4 +173,15 @@
 	    </auth-constraint>
 	</security-constraint>
 	
+	<!-- Security roles -->
+	<security-role>
+	    <role-name>Everyone</role-name>
+	</security-role>
+	<security-role>
+	    <role-name>Developer</role-name>
+	</security-role>
+	<security-role>
+	    <role-name>Operator</role-name>
+	</security-role>
+	
 </web-app>
