--- a/modules/services/service-operations/pom.xml
+++ b/modules/services/service-operations/pom.xml
@@ -44,6 +44,16 @@
             <artifactId>dirigible-api-facade-utils</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-core-scheduler</artifactId>
+        	<version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-core-security</artifactId>
+        	<version>3.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
