--- a/modules/services/service-operations/pom.xml
+++ b/modules/services/service-operations/pom.xml
@@ -54,6 +54,16 @@
         	<artifactId>dirigible-core-security</artifactId>
         	<version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-core-messaging</artifactId>
+        	<version>3.2.0-SNAPSHOT</version>
+        </dependency>
+         <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-database-data-structures</artifactId>
+        	<version>3.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
