--- a/ide/services/pom.xml
+++ b/ide/services/pom.xml
@@ -15,7 +15,11 @@
     <packaging>pom</packaging>
 
 	<modules>
-		<module>ide-all</module>
+		<!-- Grouping Modules -->
+		<module>ide-group-all</module>
+		<module>ide-group-javascript</module>
+		
+		<!-- Plugin Modules -->
 		<module>ide-console</module>
 		<module>ide-databases</module>
 		<module>ide-generation</module>
