--- a/api/api-facade/api-bpm/pom.xml
+++ b/api/api-facade/api-bpm/pom.xml
@@ -38,6 +38,7 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-bpm-api</artifactId>
             <version>3.2.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         
     </dependencies>
