--- a/ide/services/ide-group-javascript/pom.xml
+++ b/ide/services/ide-group-javascript/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-api-facade-parent</artifactId>
+		<artifactId>dirigible-ide-service-parent</artifactId>
 		<version>3.2.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>API - Facade - CMS</name>
-	<artifactId>dirigible-api-facade-cms</artifactId>
+	<name>IDE - Services</name>
+	<artifactId>dirigible-ide-services-group-javascript</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -31,28 +31,29 @@
     <dependencies>
     	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-commons-api</artifactId>
+            <artifactId>dirigible-ide-service-console</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-cms-api</artifactId>
+            <artifactId>dirigible-ide-service-databases</artifactId>
             <version>3.2.0-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-core-security</artifactId>
+            <artifactId>dirigible-ide-service-git</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
-        
         <dependency>
-		    <groupId>org.apache.chemistry.opencmis</groupId>
-		    <artifactId>chemistry-opencmis-commons-api</artifactId>
-		    <version>${chemistry.version}</version>
-		    <scope>provided</scope>
-		</dependency>
-
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-service-publisher</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-service-workspaces</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
