Fixed: #265 - Database Distro

--- a/ide/services/pom.xml
+++ b/ide/services/pom.xml
@@ -18,6 +18,7 @@
 		<!-- Grouping Modules -->
 		<module>ide-group-all</module>
 		<module>ide-group-javascript</module>
+		<module>ide-group-database</module>
 		
 		<!-- Plugin Modules -->
 		<module>ide-console</module>
