--- a/api/api-facade/api-indexing/pom.xml
+++ b/api/api-facade/api-indexing/pom.xml
@@ -43,6 +43,7 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-core-indexing</artifactId>
             <version>3.2.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
