--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -15,8 +15,12 @@
     <packaging>pom</packaging>
 
 	<modules>
+		<!-- Grouping Modules -->
         <module>ide-all</module>
         <module>ide-javascript</module>
+        <module>ide-database</module>
+        
+        <!-- Plugin Modules -->
 		<module>services</module>
 		<module>ui</module>
 	</modules>
