--- a/ide/services/ide-group-database/pom.xml
+++ b/ide/services/ide-group-database/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-api-facade-parent</artifactId>
+		<artifactId>dirigible-ide-service-parent</artifactId>
 		<version>3.2.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>API - Facade - Messaging</name>
-	<artifactId>dirigible-api-facade-messaging</artifactId>
+	<name>IDE - Services</name>
+	<artifactId>dirigible-ide-services-group-database</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -31,21 +31,14 @@
     <dependencies>
     	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-commons-api</artifactId>
+            <artifactId>dirigible-ide-service-console</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-commons-config</artifactId>
+            <artifactId>dirigible-ide-service-databases</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-core-messaging</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
     </dependencies>
 
 </project>
