--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -38,6 +38,7 @@
 		<!-- Grouping Modules -->
 		<module>ide-group-all</module>
 		<module>ide-group-javascript</module>
+		<module>ide-group-database</module>
 		
 		<!-- Plugin Modules -->
 		<module>ide-console</module>
