--- a/releng/server-database/src/main/resources/dirigible.properties
+++ b/releng/server-database/src/main/resources/dirigible.properties
@@ -10,7 +10,8 @@
 
 # General
 DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.1.1
-DIRIGIBLE_PRODUCT_TYPE=all
+DIRIGIBLE_PRODUCT_VERSION=3.2
+DIRIGIBLE_PRODUCT_TYPE=database
 DIRIGIBLE_INSTANCE_NAME=server
+DIRIGIBLE_HOME_URL=/services/v3/web/ide-database/index.html
 
