--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>dirigible-cms-internal</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-indexing</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
